# odinmath

./: .gitignore  CMakeLists.txt  README.md  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
odinmath_lib/: CMakeLists.txt  Matrix.h  Vector.h  exception.cpp  exception.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  odinmath.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h  vectorintrin.h
odinmath_lib/include/: Matrix.h  Vector.h  exception.h  math.h  matrix2.h  matrix3.h  matrix4.h  matrixintrin.h  qr.h  quaternion.h  trig.inl  trigonometry.h  vector2.h  vector3.h  vector4.h  vectorintrin.h
odinmath_lib/inline/: math.inl  trig.inl  trigonometry.inl  vectorintrintrig.inl
odinmath_lib/src/: matrix2.cpp  matrix3.cpp  matrix4.cpp  qr.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
tests/: CMakeLists.txt  math_test.cpp  matrix2_test.cpp  matrix3_test.cpp  matrix4_test.cpp  matrix_intrin_test.cpp  matrix_test.cpp  qr_test.cpp  quaternion_intrin_test.cpp  quaternion_test.cpp  trig_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp  vector_intrin_test.cpp  vector_intrin_trig_test.cpp  vector_test.cpp
